# grok2api

./: .gitignore  Dockerfile  README.md  config.defaults.toml  docker-compose.yml  main.py  pyproject.toml  readme.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: docker.yml
app/: main.py
app/api/pages/: admin.py
app/api/v1/: chat.py  image.py  models.py  video.py
app/control/account/: commands.py  invalid_credentials.py  models.py  quota_defaults.py  refresh.py  repository.py  scheduler.py  state_machine.py
app/control/model/: enums.py  registry.py  spec.py
app/core/: log_viewer.py  logger.py  response_middleware.py  storage.py
app/dataplane/account/: __init__.py  feedback.py  selector.py  sync.py  table.py
app/dataplane/proxy/: selector.py
app/dataplane/shared/: enums.py
app/platform/: update_check.py
app/platform/auth/: middleware.py
app/platform/net/: grpc.py
app/platform/runtime/: batch.py
app/platform/startup/: __init__.py  migration.py
app/products/: _account_selection.py
app/products/anthropic/: messages.py  router.py
app/products/openai/: _format.py  chat.py  images.py  responses.py  router.py  schemas.py  video.py
app/services/reverse/: app_chat.py  rate_limits.py
docs/: README.en.md
scripts/: inject_cookie.py
tests/: test_admin_account_pagination_export.py  test_admin_batch_pr13_integration.py  test_console_reasoning_effort.py  test_console_stream_adapter.py  test_image_app_chat.py  test_release_smoke.py  test_stream_heartbeat.py  test_video_and_token_fixes.py  test_video_multi_reference.py
(+78 files in other folders)
