[project]
name = "grok2api"
version = "2.0.12"
description = "Maintained Grok2API gateway for current grok.com, console.x.ai, Imagine, and OpenAI-compatible API behavior."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.4",
    "aiohttp-socks>=0.11.0",
    "aiomysql>=0.2.0",
    "asyncpg>=0.31.0",
    "certifi>=2025.10.5",
    "cryptography>=46.0.7",
    "curl-cffi>=0.15.0",
    "fastapi>=0.119.0",
    "granian>=2.7.2",
    "greenlet>=3.3.1",
    "loguru>=0.7.3",
    "orjson>=3.11.4",
    "pydantic>=2.12.3",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.26",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.46",
    "starlette>=0.48.0",
    "tiktoken>=0.8.0",
    "tomli-w>=1.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
